minijinja/tests/snapshots/test_templates__vm@err_bad_test_arguments.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "{% for item in seq %}\n  {% if item is even(42) %}\n    {{ item }}\n  {% endif %}\n{% endfor %}"
info:
  seq:
    - 1
    - 2
    - 3
input_file: minijinja/tests/inputs/err_bad_test_arguments.txt
---
!!!ERROR!!!

Error {
    kind: TooManyArguments,
    name: "err_bad_test_arguments.txt",
    line: 2,
}

---------------------------- Template Source -----------------------------
   1 | {% for item in seq %}
   2 >   {% if item is even(42) %}
     i                 ^^^^^^^^ too many arguments
   3 |     {{ item }}
   4 |   {% endif %}
   5 | {% endfor %}
--------------------------------------------------------------------------
Referenced variables: {
    item: 1,
    loop: LoopState {
        index0: 0,
        index: 1,
        length: 3,
        revindex: 3,
        revindex0: 2,
        first: true,
        last: false,
        depth: 1,
        depth0: 0,
    },
    seq: [
        1,
        2,
        3,
    ],
}
--------------------------------------------------------------------------



