minijinja/tests/snapshots/test_templates__vm@err_raw_block_missing_end.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "{% raw %}this raw block is missing an end tag"
info: {}
input_file: minijinja/tests/inputs/err_raw_block_missing_end.txt
---
!!!SYNTAX ERROR!!!

Error {
    kind: SyntaxError,
    detail: "unexpected end of raw block",
    name: "err_raw_block_missing_end.txt",
    line: 1,
}

syntax error: unexpected end of raw block (in err_raw_block_missing_end.txt:1)
------------------------ err_raw_block_missing_end.txt ------------------------
   1 > {% raw %}this raw block is missing an end tag
     i                                              ^ syntax error
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
No referenced variables
-------------------------------------------------------------------------------
