minijinja/tests/snapshots/test_templates__vm@err_repeat_iterator_with_object.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "{{ [1, 2, 3] * {} }}"
info: {}
input_file: minijinja/tests/inputs/err_repeat_iterator_with_object.txt
---
!!!ERROR!!!

Error {
    kind: InvalidOperation,
    detail: "sequences and iterables can only be multiplied with integers",
    name: "err_repeat_iterator_with_object.txt",
    line: 1,
}

invalid operation: sequences and iterables can only be multiplied with integers (in err_repeat_iterator_with_object.txt:1)
--------------------- err_repeat_iterator_with_object.txt ---------------------
   1 > {{ [1, 2, 3] * {} }}
     i    ^^^^^^^^^^^^^^ invalid operation
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
No referenced variables
-------------------------------------------------------------------------------
